--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Stick'N'Dip</title>
+    <link rel="stylesheet" href="style.css">
+<script type="module" src="/src/main.jsx"></script>
+
   </head>
   <body>
+    <div id="loginWrapper">
+      <div id="loginWrapper">
+        <div class="wrapper" style="display: block;">
+            <h1>login</h1>
+            <div class="input-box">
+                <input type="text" id="username" placeholder="Username" required>
+            </div>
+            <div class="input-box">
+                <input type="password" id="password" placeholder="Password" required>
+            </div>
+            <button onclick="login()" class="btnL">login</button>
+            <p id="message" style="color: red;"></p>
+        </div>
+    </div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
