--- a/client/index.html
+++ b/client/index.html
@@ -10,21 +10,8 @@
 
   </head>
   <body>
-    <div id="loginWrapper">
-      <div id="loginWrapper">
-        <div class="wrapper" style="display: block;">
-            <h1>login</h1>
-            <div class="input-box">
-                <input type="text" id="username" placeholder="Username" required>
-            </div>
-            <div class="input-box">
-                <input type="password" id="password" placeholder="Password" required>
-            </div>
-            <button onclick="login()" class="btnL">login</button>
-            <p id="message" style="color: red;"></p>
-        </div>
+    <div id="root">BOKKKKKKKKKKKKKKKKKKKKk
     </div>
-    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
